Changes: Changed the title

--- a/movieResults.html
+++ b/movieResults.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
         <link rel="stylesheet" href="css/movieResults.css">
-        <title>Moviefy - Search Results</title>
+        <title>Search Results</title>
         <link rel="icon" href="images/website_icon.ico">
     </head>
 
