--- a/movie.html
+++ b/movie.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title></title>
         <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
         <link rel="stylesheet" href="css/movieResults.css">
         <link rel="stylesheet" href="css/movie.css">
