Changes: Improved and cleaned the code

--- a/movie.html
+++ b/movie.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="images/website_icon.ico">
     </head>
 
-    <header class>
+    <header>
         <div class="container">
             <div class="nav-nav">
                 <div class="left">
